For ESPER-183 Replace LinkedLists with ArrayDeque where possible
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@1126 d91eb1b3-1215-0410-9718-d41490442091